# skyvault-rs

./: .bazelrc  .dockerignore  .env  .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  MODULE.bazel  README.md  SECURITY.md  buf.gen.yaml  buf.yaml  build.rs  justfile  rust-toolchain.toml
.cursor/rules/: skyvault.mdc
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
.sqlx/: query-07946b856dfc1699a92d97ac562ad86ea9eb9afc52ec26d4c2eb901d148f6ee5.json  query-0ad26e284ed2a064632c20815fd42f7f17005107620cedd8837e69ec9b6ec596.json  query-1406634af5b0278e601795e7bf379cb6bf75c88b2f2515930d449527a1ebf33b.json  query-1d4acc1d3a22badfdbfdcf208caf9d9bcbe5d838b8ca7466de283059eb6f5d89.json  query-28d985113a315bed8906a329cdaca7a53e1f9ccdee94ae7c94f16428df2f8a99.json  query-359f88efb1118f9834c88997cf42455f02d2b340c4ba15b3b87570d38f2c1b77.json  query-385147d906297508613a05024e1b4398a14a64370ee0e6db5f4b27a985bac59e.json  query-3b855481006a37793623585740248a7b68b563b2b1e3c5efe47d19a5b303ef68.json  query-4af4b2804280e05f36559cabb8fbc7425e94190b88faac903db90bfc1deae1da.json  query-4cd443c5b26cb016618541f6744da65344cb576c38b8a26000e56508b0d7a5a1.json  query-4f611d2210527ab3d72e3a55ebd95bc4f23fc10a6ba435248fab813fc65616ad.json  query-5b8a68864f15f48e665e7e5e3e565eeee0912a8a7ba8b7e1ff461cd9f1540d23.json  query-5c8b4e66b61b1d46c0948b36057357f5c4061572da7eec2f9f8d8a76b6aff0bd.json  query-5db3273f78cf4a8b82faba84b3fe6152a98086c2e2df03965d991ef56c9c41af.json  query-6103ec9abb06a9b34f2c927715aafb37504768bd16d0039b7d0b8ffcc03f9f6f.json  query-81566fbb51cc59a0bca7ea0ee7bb7083c3f6dd5abd817ef1a51e7c2ee027d3ed.json  query-8386d210fde4ab9e0579c1cc9e1d4870698e6a312cbc689159a52a7f26cd4d22.json  query-845d519c05dec1f165c8c090aebf920c797ef48f78f09e484aea56a6c27a00c2.json  query-9234f56a7596ee69d49434fd7b31b3fb0c883ec0539a0b46d2ed76e99c8785fa.json  query-94786ec2f0a7558e000063035fa70e69fe177585f0f78174c45345f52bd5053c.json  query-9a70a9979f538f882242296ddbe5c1e9092271404ae15035e57bbb05bc5a2a16.json  query-9f4769a5e3da90005ff25ff4f7dfdfa4f9424189a521fbc7b97b3b9c2a30bda1.json  query-a343440cf6fff3c42ef18581a156d150b4eefac02b01b394dd548671c092b887.json  query-a8dd2e8f095c87bf583fc1b52bf2e203c79e000be518621aa3bcf037a7861088.json  query-ad0c4d46876b140b97393e2c64a7dba23b0c5d9205e00ef153f2a95ac342a44e.json  query-af9a4c6ac1795d159f34ed5d4c08a2fc9c0eb6de48f120a5992c256ad05c388d.json  query-b1eb1e68736ea895231b5aa06e510f4534a9eb14c810b37429a286c5895c8b0c.json  query-b25240adba91f12d367382e3adf0e794737e3fe187c69176f8ccb458ac5cb995.json  query-b80866b405a90927f439bbdbdc86ed6e99ec892893e942d23718bd6568fd92fa.json  query-bb5f2dc242a5facfabf1fc8b98a0439538ea6fa38bea7e32dcba525c514e2a0b.json  query-c30a9f5c833bf2b59701009b174ac638d072bc26b1b68f514437d47dec53c8e9.json  query-c3324ac284281aa25f2e675284ccaa12577aa852471ffabd3c5b3c0ef2289ecc.json  query-c3d35bb145ed4741383a764415b9ce29b1bcf85ec989ed02462ef1d9ad30fbb7.json  query-c777ad381b50eff322d86ff90f6991bde3ffda4f47784c8139d513f2e6f9c43e.json  query-c863c51fe5be6490113035faf8622f01e1d8f1be13114ef8f6e71a0ad017d8be.json  query-d0e9d29f469a25a5aa4e42718e2e1d5c6183fe248ba6f7e8b80a219d1ec3aca1.json  query-d217a345c64d2873ac04054fe74cab4bc1c37d55adc213a3318982de5f1113a6.json  query-d34da704721e4b8c44afdc815ab74061dcb402b96caeb94bf4f20f76e292e7d8.json  query-da6941013f9902a2393e9bdcfaa74ffba670c1011a14df508ddadb139a241b4e.json  query-dd6902e4fadf9c69e7d069dfef82c946bbe61ef7b958514cdcc440f308f75344.json  (+6 more)
charts/: README.md
charts/skyvault/: Chart.yaml  values.yaml
charts/skyvault/templates/: NOTES.txt  _helpers.tpl  aws-secrets.yaml  database-secrets.yaml  dynamic-configmap.yaml  dynamic-configs.yaml  dynamodb-deployment.yaml  dynamodb-service.yaml  job-dynamic-configs.yaml  minio-deployment.yaml  minio-service.yaml  otel-collector-configmap.yaml  otel-collector-deployment.yaml  otel-collector-service.yaml  postgres-deployment.yaml  postgres-service.yaml  reset-db-dry-job-configmap.yaml  reset-db-job-configmap.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml  skyvault-deployment.yaml  skyvault-deployments.yaml  skyvault-service.yaml  wal-compactor-deployment.yaml
charts/skyvault/templates/tests/: test-pvc-creation.yaml
migrations/: 0001_init.sql  0002_reset.sql  0003_add_changelog_notifications.sql
proto/: BUILD  buf.yaml  skyvault.proto
proto/proto/: skyvault.proto
proto/skyvault/v1/: skyvault.proto
skycli/: README.md  main.py  minikube.py  pyproject.toml
skycli/proto/skyvault/v1/: skyvault_pb2.py  skyvault_pb2.pyi  skyvault_pb2_grpc.py
skycli/skyvault/v1/: skyvault_pb2.py  skyvault_pb2.pyi  skyvault_pb2_grpc.py
skycli/tests/: smoke_tests.py
smoke-tests/: .gitignore  README.md  build.py  pyproject.toml  pytest.ini  test_skyvault.py  tests.py
smoke-tests/proto/: __init__.py  skyvault_pb2.py  skyvault_pb2.pyi  skyvault_pb2_grpc.py
smoke-tests/skyvault/v1/: skyvault_pb2.py  skyvault_pb2.pyi  skyvault_pb2_grpc.py
src/: allocator.rs  batcher_service.rs  cache.rs  cache_service.rs  config.rs  consistent_hashring.rs  dynamic_config.rs  forest.rs  index_service.rs  job_watcher.rs  jobs.rs  k8s.rs  k_way.rs  lib.rs  metadata.rs  metadata_tests.rs  metrics.rs  observability.rs  orchestrator_service.rs  pod_watcher.rs  prelude.rs  reader_service.rs  runs.rs  runs_cache.rs  singleflight.rs  storage.rs  telemetry.rs  test_utils.rs  tracing_utils.rs  writer_service.rs
src/jobs/: k_way.rs  mod.rs  table_buffer_compaction.rs  table_tree_compaction.rs  wal_compaction.rs
src/migrations/: 0001_init.sql
tests/: batcher_service_test.rs  index_service_test.rs  integration_test.rs  orchestrator_service_test.rs  smoke_tests.rs
tests/common/: mod.rs  test_server.rs
