[package]
name = "skyvault"
version = "0.0.8"
edition = "2024"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
overflow-checks = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "skyvault"
path = "bin/main.rs"

[[bin]]
name = "worker"
path = "bin/worker.rs"

[dependencies]
tonic = "0.13"
tonic-health = "0.13"
tonic-reflection = "0.13"
tokio = { version = "1", features = ["full"] }
prost = "0.13"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sentry = { version = "0.32", features = ["tracing"] }
sentry-tracing = "0.32"
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
futures = "0.3"
byteorder = "1.5"
aws-config = "1.6"
aws-sdk-s3 = "1.82"
aws-smithy-runtime-api = "1.8.0"
ulid = "1.2.1"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
hostname = "0.4"
kube = { version = "0.99", features = ["runtime"] }
rustls = "0.23"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "derive", "macros", "json" ] }
serde_json = "1.0"
bytes = "1.10"
http = "1"
hyper = "1"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"
tower = "0.5"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
mockall = "0.13"
testcontainers-modules = { version = "0.11.6", features = ["postgres", "minio"] }
proptest = "1.0"
