[package]
name = "skyvault"
version = "0.0.8"
edition = "2024"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
overflow-checks = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "skyvault"
path = "bin/main.rs"

[[bin]]
name = "worker"
path = "bin/worker.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
aws-config = "1.6"
aws-sdk-s3 = "1.86"
aws-smithy-runtime-api = "1.8.0"
axum = "0.8"
bytes = "1.10"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
futures-util = "0.3"
hostname = "0.4"
http = "1"
k8s-openapi = { version = "0.25.0", features = ["v1_32"] }
kube = { version = "1.0", features = ["runtime"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
prost = "0.13"
rand = "0.9"
rustls = "0.23"
sentry = { version = "0.38", features = ["tracing"] }
sentry-tracing = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "derive", "macros", "json" ] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tonic = "0.13"
tonic-health = "0.13"
tonic-reflection = "0.13"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ulid = "1.2.1"
tokio-retry = "0.3.0"


[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
mockall = "0.13"
proptest = "1.0"
testcontainers-modules = { version = "0.12", features = ["postgres", "minio"] }
