[package]
name = "skyvault"
version = "0.0.15"
edition = "2024"
license-file = "LICENSE"
description = "Object store backed key-value store"
readme = "README.md"
repository = "https://github.com/dynoinc/skyvault-rs"
homepage = "https://github.com/dynoinc/skyvault-rs"
keywords = ["storage", "cloud", "distributed", "object-storage", "s3"]
categories = ["database", "asynchronous"]

[profile.release]
lto = true
panic = "abort"
opt-level = 3
overflow-checks = true

[lib]
path = "src/lib.rs"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async and futures
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.45", features = ["full"] }
tokio-retry = "0.3"

# AWS and S3
aws-config = "1.6"
aws-sdk-s3 = "1.91"
aws-smithy-runtime-api = "1.8"
aws-smithy-types = "1.3"

# gRPC
http = "1"
tonic = "0.13"
tonic-health = "0.13"
tonic-reflection = "0.13"
tower = "0.5"

# Data handling and serialization
bytes = "1.10"
byteorder = "1.5"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cache dependencies
schnellru = "0.2"
memmap2 = "0.9"
fs2 = "0.4"

# Database
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "derive", "macros", "json" ] }

# Kubernetes
k8s-openapi = { version = "0.25", features = ["v1_32"] }
kube = { version = "1.1", features = ["runtime"] }

# Logging and metrics
opentelemetry = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error tracking
sentry = { version = "0.38", features = ["tracing"] }
sentry-tracing = "0.38"
sentry-tower = { version = "0.38", features = ["http"] }

# Miscellaneous
clap = { version = "4.5", features = ["derive", "env"] }
hostname = "0.4"
rand = "0.9"
rustls = "0.23"
ulid = "1.2"
urlencoding = "2.1"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
mockall = "0.13"
proptest = "1.7"
regex = "1.0"
tempfile = "3.20"
testcontainers-modules = { version = "0.12", features = ["postgres", "minio"] }
