module(
    name = "skyvault",
    version = "0.0.11",
)

# Core dependencies
bazel_dep(name = "rules_proto", version = "6.0.0")
bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "protobuf", version = "26.0")

# Python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)
