[project]
name = "skycli"
version = "0.1.0"
description = "Skyvault CLI and Testing Tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.71.0",
    "protobuf>=6.31.0",
    "fire>=0.7.0",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests as smoke tests"
]
testpaths = ["tests"]
python_files = ["*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
