[project]
name = "skyvault-smoke-tests"
version = "0.1.0"
description = "Python smoke tests for Skyvault gRPC service"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "protobuf>=5.29.4",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[tool.ruff]
exclude = ["skyvault*"]
